--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dotnet: [ '8.0.x', '9.0.x', '10.0.x', '11.0.x', '12.0.x', '13.0.x' ]
+        dotnet: [ '8', '9', '10', '11', '12', '13' ]
     env:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
@@ -117,6 +117,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ matrix.dotnet }}
+          dotnet-quality: 'ga'
       - name: Build
         run: ./csharp/build.sh
       - name: Run tests
